--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         </div>
         <div class="conteudo-senha">
             <label for="senha">Senha</label>
-            <input name="senha" type="text" id="campo-senha" readonly> <!-- PAREI AQUI NO READONLY!!!! AULA 5 OU 28 -->
+            <input name="senha" type="text" id="campo-senha" readonly>
+            <button class="botao-gerar">🔄
+            </button>
         </div>
         <div class="parametro">
             <h3 class="parametro-titulo">Personalize sua senha</h3>
